--- a/project.config.json
+++ b/project.config.json
@@ -24,7 +24,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.3",
-	"appid": "wxc832c360b85b0b6d",
+	"appid": "wx3d719a9721ff31e5",
 	"projectname": "Mini",
 	"debugOptions": {
 		"hidedInDevtools": []
